# MCP-SEC-Filings

./: .gitignore  README.md  dev.ipynb  main.py  pyproject.toml  sec_server.py
mcp_sec_filings/: .env  constants.py  datamodels.py  docling_vllm.py  pdf2md.py  sec_filings.py
