[tool.poetry]
name = "mcp-sec-filings"
version = "0.1.0"
description = ""
authors = ["Astarag Mohapatra athekunal@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
pandas = "^2.2.3"
pdfkit = "^1.0.0"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
loguru = "^0.7.3"
pydantic = "^2.11.2"
pydantic-settings = "^2.8.1"
black = "^25.1.0"
httpx = "^0.28.1"
mcp = {extras = ["cli"], version = "^1.6.0"}
pkginfo = "^1.12.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

