[project]
name = "mcp-sec-filings"
version = "0.1.0"
description = ""
authors = [
    {name = "Astarag Mohapatra", email = "athekunal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.2.3",
    "pdfkit>=1.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "loguru>=0.7.3",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "black>=25.1.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pkginfo>=1.12.1.2",
    "docling>=2.30.0",
    "ipykernel>=6.29.5",
    "pdf2image>=1.17.0",
    "torch<=2.6.0",
    "vllm==0.6.6",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "black>=25.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true
